<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="shifoo.com.app.modules.login.view.LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="134dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="224dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/txt_login"
            android:textColor="@color/TopHeadingColor"
            android:textSize="@dimen/dimens_18dp"
            android:letterSpacing=".5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_header1"
            android:layout_width="232dp"
            android:layout_height="25dp"
            android:text="@string/txt_loginheader"
            android:textColor="@color/SecondHeadingColor"
            android:textSize="@dimen/dimen_14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_header2"
            android:layout_width="212dp"
            android:layout_height="20dp"
            android:layout_marginTop="70dp"
            android:text="@string/txt_mobileno"
            android:textColor="@color/grey"
            android:textSize="@dimen/dimen_12dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abc"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/country_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"

                    android:paddingTop="15dp"
                    android:text="+91"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16dp"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/country_code_tv">

                    <EditText
                        android:id="@+id/phone_number_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="1234567890"
                        android:hint=""

                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="2dp"

                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#D8D8D8"

                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#D8D8D8" />


        </LinearLayout>


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:buttonTint="@color/grey"
            android:checked="false"
            android:letterSpacing=".8"
            android:text="@string/txt_chechbox"
            android:textColor="@color/PrivacyCollor"
            android:textSize="@dimen/dimen_12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacypolicy"
                android:textColor="@color/PrivacyCollor"
                android:textSize="@dimen/dimen_12dp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/accepttermandcondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/roundgrey"
            android:padding="@dimen/dimen_13dp"
            android:text="@string/txt_termcondition"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14dp" />


    </LinearLayout>
</ScrollView>
</LinearLayout>